styles/design.css
/* ... */
  #giron-cards article .card-link:hover,
  #actus article .card-link:hover,
  .wp-block-latest-posts__list .latest-posts-read-more:hover,
  .more-link:hover {
    color: var(--white);
    background-color: var(--redhover);
  }

  /* ---- Latest Posts as cards ---- */
  .wp-block-latest-posts__list {
    list-style: none;
    margin: 0;
    padding: 0;
    display: grid;
    grid-template-columns: 1fr;
    gap: 30px;
  }

  @media screen and (min-width: 700px) {
    .wp-block-latest-posts__list {
      grid-template-columns: 1fr 1fr;
    }
  }

  @media screen and (min-width: 999px) {
    .wp-block-latest-posts__list {
      grid-template-columns: 1fr 1fr 1fr;
    }
  }

  .wp-block-latest-posts__list > li {
    background-color: var(--white);
    border-radius: 14px;
    border: 1px solid rgba(24, 36, 55, 0.12);
    overflow: hidden;
    box-shadow: 0 10px 25px rgba(24, 36, 55, 0.08);
    display: flex;
    flex-direction: column;
    height: 100%;
    padding-bottom: 22px;
  }

  .wp-block-latest-posts__list .wp-block-latest-posts__featured-image {
    margin: 0;
    line-height: 0;
  }

  .wp-block-latest-posts__list .wp-block-latest-posts__featured-image img {
    width: 100%;
    height: auto;
    aspect-ratio: 16 / 9;
    object-fit: cover;
    display: block;
  }

  .wp-block-latest-posts__list .wp-block-latest-posts__post-date {
    display: inline-flex;
    align-self: flex-start;
    margin: 22px 22px 0 22px;
    padding: 10px 18px;
    border-radius: 999px;
    background-color: var(--darkblue);
    color: var(--white);
    font-family: var(--headingfont);
    font-size: 1.1rem;
    font-weight: var(--boldweight);
    text-transform: uppercase;
    line-height: 1;
  }

  .wp-block-latest-posts__list .wp-block-latest-posts__post-title {
    margin: 22px 22px 0 22px;
    font-family: var(--headingfont);
    font-size: 2.15rem;
    font-weight: var(--boldweight);
    line-height: 1.05;
    color: var(--darkblue);
    text-decoration: none;
  }
  .wp-block-latest-posts__list .wp-block-latest-posts__post-full-content {
    margin: 22px 22px 0 22px;
  }

  .wp-block-latest-posts__list .wp-block-latest-posts__post-title:hover {
    color: var(--redhover);
  }

  .wp-block-latest-posts__list .wp-block-latest-posts__post-excerpt {
    margin: 16px 22px;
    color: var(--textblue);
  }

  .wp-block-latest-posts__list .latest-posts-read-more {
    margin: 24px 22px 22px 22px;
    align-self: flex-start;
  }
  /* ---- End Giron Veveyse ---- */

  .site,
  .single{
    background-color: var(--lightblue);
    background-size: cover;
    background-position: right bottom;
    background-image: url('/wp-content/themes/edelparc26/images/bgslime.jpg');
  }
  @media screen and (min-width: 999px) {
    .single-content{
      grid-gap: 30px;
      display: grid;
      grid-template-columns: 1fr 1fr;
    }
  }

  .single-content .single-featured-image {
    margin-bottom: 1.5rem;
  }

  .single-content .single-featured-image img {
    width: 100%;
    height: auto;
    display: block;
    border-radius: var(--borderradius);
    margin-bottom: 1.5rem;
  }

  .category-bienvenue:hover h2:after {
    top: -190px;
  }
  
  .category-bienvenue h2 {
    font-size: 60px;
    line-height: normal;
    font-weight: var(--boldweight);
    line-height: 1;
    letter-spacing: 2px;
    position: relative;
  }
  
  
  @media screen and (min-width: 999px) {
    .category-bienvenue h2:after {
      right: 150px;
      top: -130px;
    }
  }
  
  .category-bienvenue .entry-content {
    display: -ms-grid;
    display: grid;
  }
  
  @media screen and (min-width: 499px) {
    .category-bienvenue .entry-content {
      -ms-grid-columns: 1fr 1fr;
      grid-template-columns: 1fr 1fr;
      -ms-grid-rows: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
    }
  
    .category-bienvenue .entry-content p {
      padding-right: 40px;
    }
  }
  
  @media screen and (max-width: 1000px) {
    .contact-cols {
      display: block;
    }
  
    .contact-cols>div.wp-block-column {
      -ms-flex-preferred-size: 100% !important;
      flex-basis: 100% !important;
      margin-left: 0 !important;
    }
  }
  
  body {
    position: relative;
  }
  
  .widget-area h2{
    background: none;
    height: auto;
    width: auto;
    padding: 10px;
    font-size:24px;
    color:var(--yellow);
    font-family: var(--sansfont);
    font-weight: var(--normalweight);
    min-width: auto;
    margin: 0;
  }
  .widget-area ul{
    padding: 10px !important;
    margin: 0;
  }
  .widget-area ul li{
      margin-bottom:18px;
  }
  .widget-area ul li a{
      color:var(--white);
      text-decoration:none;
  }
  .widget-area ul li a:hover{
      text-decoration:underline;
  }
  
  footer#colophon{
    padding: 10px;
    min-height: 45px;
  }
  
  footer#colophon,
  footer#colophon a {
    color: var(--white);
    font-size: 14px;
    font-weight: var(--normalweight);
    background-color: var(--darkblue);
  }
  
  footer#colophon a:hover {
    color: var(--yellow);
  }
  
  /*--------------------------------------------------------------
  # Components
  --------------------------------------------------------------*/
  /* Navigation
  --------------------------------------------- */
  .main-navigation {
    -ms-grid-row: 1;
    -ms-grid-column: 2;
    grid-area: nav;
    display: flex;
    justify-content: end;
    height: 100px;
    position: absolute;
    right: 0;
  }
  
  .main-navigation ul {
    display: none;
    list-style: none;
    margin: 20px 0 80px;
    padding-left: 0;

  }

  .main-navigation ul {
    width: 100%;
    background-color: var(--darkblue);
    position: absolute;
    left: 0;
    top: 0;
    z-index: 20;
  }

  .main-navigation #primary-menu {
    padding: 100px 0;
  }

  
  .main-navigation ul ul li:hover>ul,
  .main-navigation ul ul li.focus>ul {
    display: block;
    left: auto;
  }
/* ... */

